<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#86ADC1"
    tools:context="MainActivity.contactsMain">


    <TextView
        android:id="@+id/textViewHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="600dp"
        android:fontFamily="@font/andika"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/contacts"
        android:textColor="#000000"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="77dp"
        android:layout_height="68dp"
        android:background="@drawable/roundstyle"
        android:backgroundTint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewHeader"
        app:layout_constraintVertical_bias="0.934"
        app:srcCompat="@drawable/home" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="127dp"
        android:layout_height="35dp"
        android:fontFamily="@font/andika"
        android:text="@string/homepage"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textViewHeader"
        app:layout_constraintVertical_bias="0.998" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="333dp"
        android:layout_height="60dp"
        android:background="@drawable/roundstyle"
        android:backgroundTint="#FFFFFF"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textViewHeader"
        app:layout_constraintVertical_bias="0.811"
        tools:ignore="MissingConstraints"> <!-- Center items vertically -->

        <ImageButton
            android:id="@+id/imageButton3"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:background="@drawable/roundstyle"
            android:backgroundTint="#FFFFFF"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/plus" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/andika"
            android:text="@string/add"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="20sp" />

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="333dp"
        android:layout_height="389dp"
        android:background="@drawable/roundstyle"
        android:backgroundTint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textViewHeader"
        app:layout_constraintVertical_bias="0.337">

        <Button
            android:id="@+id/scrollconts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#CDCBCB"
            android:fontFamily="@font/andika"
            android:text="..."
            android:textColor="#000000"
            app:cornerRadius="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.953" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>